# oversight-mobile

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
.github/workflows/: android.yml  ios.yml
android/: build.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/oversightprotocol/oversight/: MainActivity.kt
assets/samples/: sample_tampered.oversight  sample_welcome.oversight
docs/: PRIVACY.md  RELEASE.md  STORE_LISTING.md
ios/: ExportOptions.plist  Podfile
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
ios/fastlane/: Appfile  Fastfile
lib/: main.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: verify.dart
rust/: Cargo.toml
rust/oversight-mobile-ffi/: Cargo.toml
rust/oversight-mobile-ffi/src/: lib.rs
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: verify.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_oversight.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_oversight.podspec
rust_builder/windows/: CMakeLists.txt
test/: widget_test.dart
