[package]
name = "rust_lib_oversight"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Verifier-only FFI surface for Oversight mobile apps. Embeds the Oversight Rust core unchanged."

[lib]
name = "rust_lib_oversight"
crate-type = ["staticlib", "cdylib"]

[dependencies]
# Oversight core, verifier-relevant crates only. NO seal/sign/registry-server in the mobile API.
# Pinned to the v0.4.9 desktop release tag per docs/EMBEDDING.md in the
# oversight repo. v0.4.9 keeps the 32-bit Android portability fix from v0.4.8
# and adds the Rust registry v1, hybrid viewer, and watermark round-trip fixes.
oversight-crypto    = { git = "https://github.com/oversight-protocol/oversight.git", tag = "v0.4.9" }
oversight-manifest  = { git = "https://github.com/oversight-protocol/oversight.git", tag = "v0.4.9" }
oversight-container = { git = "https://github.com/oversight-protocol/oversight.git", tag = "v0.4.9" }
oversight-tlog      = { git = "https://github.com/oversight-protocol/oversight.git", tag = "v0.4.9" }
oversight-rekor     = { git = "https://github.com/oversight-protocol/oversight.git", tag = "v0.4.9" }
oversight-watermark = { git = "https://github.com/oversight-protocol/oversight.git", tag = "v0.4.9" }
oversight-policy    = { git = "https://github.com/oversight-protocol/oversight.git", tag = "v0.4.9" }

flutter_rust_bridge = "=2.12.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
hex = "0.4"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
